Fix info modal on mobiles

--- a/frontend/src/components/views/info_modal/InfoModal.module.scss
+++ b/frontend/src/components/views/info_modal/InfoModal.module.scss
@@ -1,3 +1,5 @@
+@import "../../../resources/styles/vars.scss";
+
 .infoModalBg {
   position: absolute;
   top: 0;
@@ -16,7 +18,7 @@
 
 .infoModal {
   padding: 2rem;
-  max-width: 35rem;
+  max-width: 100%;
   margin-bottom: auto;
   background: black;
   border: solid 0.2rem white;
@@ -24,6 +26,10 @@
 
   animation-duration: 0.5s;
   animation-name: infoModalAppear;
+
+  @media (min-width: $widthMedium) {
+    max-width: 35rem;
+  }
 }
 
 @keyframes infoModalBgAppear {
